@@ -711,3 +711,10 @@
 		item "Type::Parser functions no longer accept an arrayref of tokens, as they expect to pull tokens from a stream as required."^^Removal;
 		item "Type::Parser now provides a `extract_type` function which parses a type constraint expression from the head of a string and returns a Type::Tiny object, plus the tail of the string. (This is designed to make it easier to use Type::Parser to parse things like function signatures.)"^^Addition;
 	].
+
+`Type-Tiny 0.014 cpan:TOBYINK`
+	issued  2013-06-28;
+	changeset [
+		dcs:versus `Type-Tiny 0.013_01 cpan:TOBYINK`;
+		item "Updated NEWS file."^^Documentation;
+	].
